--- a/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
+++ b/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
@@ -18,13 +18,13 @@
 		<Company>GeLiang</Company>
 		<Copyright>Copyright (c) GeLiang</Copyright>
 		<PackageId>AutoPrimitive</PackageId>
-		<Description>Linq 2 Object extension</Description>
+		<Description>Type conversion of Primitive Data Types</Description>
 		<PackageProjectUrl>https://github.com/HZ-GeLiang/AutoPrimitive</PackageProjectUrl>
-		<PackageTags>AutoPrimitive, Primitive, TypeConvert, Convert</PackageTags>
+		<PackageTags>AutoPrimitive, Primitive, PrimitiveTypeConvert</PackageTags>
 		<PackageReleaseNotes></PackageReleaseNotes>
 		<RepositoryType>github</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<Version>0.0.1</Version>
+		<Version>0.0.2</Version>
 		<LangVersion>10</LangVersion>
 		<!--<PackageReadmeFile>README.md</PackageReadmeFile>-->
 	</PropertyGroup>
