--- a/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
+++ b/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
@@ -2,6 +2,15 @@
 	<PropertyGroup>
 		<TargetFrameworks>
 			netstandard1.0;
+			netstandard2.1;
+			<!--netcoreapp1.0;
+			netcoreapp1.1;-->
+			netcoreapp2.0;
+			netcoreapp2.1;
+			netcoreapp2.2;
+			netcoreapp3.0;
+			netcoreapp3.1;
+			net5.0;
 			net6.0;
 			net7.0;
 			net8.0;
