--- a/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
+++ b/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
@@ -1,16 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>
-			netstandard1.0;
-			netstandard2.1;
+			<!--高危漏洞的警告没有消除干净,直接不生成了-->
 			<!--netcoreapp1.0;
-			netcoreapp1.1;-->
+			netcoreapp1.1;
 			netcoreapp2.0;
 			netcoreapp2.1;
-			netcoreapp2.2;
+			netcoreapp2.2;-->
+
+			netstandard1.0;
+			<!--公共的方法在netstandard1.0中都包含了-->
+			<!--netstandard2.1;
 			netcoreapp3.0;
 			netcoreapp3.1;
-			net5.0;
+			net5.0;-->
+
+			<!--下面3个是为了 DateOnly 而存在的-->
 			net6.0;
 			net7.0;
 			net8.0;
@@ -41,6 +46,25 @@
 	<ItemGroup>
 		<Using Remove="System.Net.Http" />
 	</ItemGroup>
+
+	<!--包警告 开始-->
+	<!--高危漏洞的警告没有消除干净,直接不生成了-->
+	<!--<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp1.0'">
+		<PackageReference Include="Microsoft.NETCore.App" Version="1.0.7" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp1.1'">
+		<PackageReference Include="Microsoft.NETCore.App" Version="1.1.4" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+		<PackageReference Include="Microsoft.NETCore.App" Version="2.0.3" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.1'">
+		<PackageReference Include="Microsoft.NETCore.App" Version="2.1.18" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.2'">
+		<PackageReference Include="Microsoft.NETCore.App" Version="2.2.1" />
+	</ItemGroup>-->
+	<!--包警告 结束-->
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
