--- a/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
+++ b/Src/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
@@ -9,6 +9,7 @@
 			netcoreapp2.2;-->
 
 			netstandard1.0;
+			netstandard1.3;
 			<!--公共的方法在netstandard1.0中都包含了-->
 			<!--netstandard2.1;
 			netcoreapp3.0;
