--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 ﻿################################################################################
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
- 
+
 /.vs
 /*/bin
 /*/*/bin
 /*/obj
 /*/*/obj
 /Test/LinqExtend.EFTest/Migrations
+/*.codemark
