--- a/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
+++ b/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
@@ -69,6 +69,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
 
 	<!--分析器Analyzer start-->
