高危漏洞的警告

--- a/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
+++ b/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
@@ -69,7 +69,15 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+		<!--高危漏洞的警告-->
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+	</ItemGroup>
+
+	<!--高危漏洞的警告-->
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.3'">
+		<PackageReference Include="System.Net.Http">
+			<Version>4.3.4</Version>
+		</PackageReference>
 	</ItemGroup>
 
 	<!--分析器Analyzer start-->
@@ -79,5 +87,6 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
+
 	<!--分析器Analyzer end-->
 </Project>
