--- a/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
+++ b/AutoPrimitive.Standard/AutoPrimitive.Standard.csproj
@@ -47,10 +47,11 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Version>0.0.10</Version>
 		<LangVersion>10</LangVersion>
-		<!--<PackageReadmeFile>README.md</PackageReadmeFile>-->
+		<PackageReadmeFile>Readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Include="../README.md" Pack="true" PackagePath="\"/>
 		<Using Remove="System.Net.Http" />
 	</ItemGroup>
 
